# chrov

./: .gitignore  CITATION.cff  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  format  format.yml  python-publish.yml
chrov/viz/: annot.py  chrom.py  figure.py  plot.py  ranges.py
examples/: chrov_viz_annot.ipynb  chrov_viz_chrom.ipynb  chrov_viz_figure_custom.ipynb  chrov_viz_figure_stem.ipynb  chrov_viz_ranges.ipynb  chrov_viz_tests.ipynb  viz_annot.ipynb  viz_chrom.ipynb  viz_chrom_custom.ipynb  viz_figure_custom.ipynb  viz_figure_stem.ipynb  viz_genes.ipynb  viz_ranges.ipynb  viz_tests.ipynb
modules/: _test.py  annots.py  core.py  domains.py  features.py  isoforms.py  run.py  utils.py  viz.py
modules/fig/: mat.py
modules/inputs/: cytobands.tsv  genes.tsv
modules/plot/: mat.py
modules/viz/: __init__.py  annot.py  chrom.py  figure.py  plot.py  ranges.py
tests/: test_examples.py
